tests/paczka1/small_fuzzy/45505887.err
Error in line 5: J4jLoOD S290 0,0
Error in line 15: S290 S290 278,53
